# Softwareentwicklung

./: .gitignore  flake.nix
000HelloWorld/: CMakeLists.txt
000hello_world/: CMakeLists.txt  CMakeLists.txt.user.4b48895
010funktionen/: CMakeLists.txt  main.cpp
011funktionen/: CMakeLists.txt  main.cpp
011funktionen/011funktion/: CMakeLists.txt  main.cpp
020FirstGUI/: CMakeLists.txt
Aufgabenblatt1/: CMakeLists.txt  main.cpp
ErsteSchritte/: CMakeLists.txt  main.cpp
UebungSA/: CMakeLists.txt  main.cpp
ZweiteSchritte/: CMakeLists.txt  mainwindow.cpp
fibonacci/: fibonacci.pde
john_wayne/: john_wayne.pde
playground/: CMakeLists.txt  main.cpp
python/: data.csv  flake.nix  plot_vectors.py  requirements.txt
